ConfigProvider - typesafe (#4)